Start fitting and predicting

--- a/housing_prices_data_wrangle.ipynb
+++ b/housing_prices_data_wrangle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Housing Prices Analysis\n",
+    "# Housing Prices Data Wrangle\n",
     "\n",
     "The first part of this analysis is a copy of Pedro Marcelinos work on multivariable anaylsis. "
    ]
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -30,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import training data\n",
@@ -183,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Scatterplots of variables v. SalePrice \n",
@@ -237,7 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Box plots for categorical data\n",
@@ -1211,7 +1219,9 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Transform nonzero values\n",
